# ginko

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  application  cmake_install.cmake  ginko  ginko.proj  tutorials.proj
glib-2.0/schemas/: ginko.gschema.xml
src/: application.vala  application_context.vala  breadcrumbs.vala  config.vala  context.vala  directory_controller.vala  directory_model.vala  directory_view.vala  main.vala  main_window.vala  messages.vala  navigator_controller.vala  navigator_view.vala  pane_settings.vala  settings.vala  sizes.vala  stock.vala
src/actions/: abstract_action.vala  abstract_file_action.vala  accelerator.vala  action.vala  action_context.vala  action_descriptor.vala  action_progress_dialog.vala  basic_actions.vala  copy_file_action.vala  copy_file_action_configure_dialog.vala  copy_file_action_progress_dialog.vala  operation.vala
src/actions/copy_file/: copy_file.vala  copy_file_action.vala  copy_file_config.vala  copy_file_configure_dialog.vala  copy_file_descriptor.vala  copy_file_operation.vala
src/actions/delete_file/: delete_file_action.vala  delete_file_configure_dialog.vala  delete_file_descriptor.vala
src/actions/dialogs/: abstract_dialog.vala  abstract_message_dialog.vala  overwrite_dialog.vala  progress_dialog.vala  rename_dialog.vala
src/actions/move_file/: move_file_action.vala  move_file_config.vala  move_file_configure_dialog.vala  move_file_descriptor.vala
src/dialogs/: abstract_dialog.vala
src/format/: attr_format.vala  size_format.vala  time_format.vala
src/io/: file_wrapper.vala  files.vala  renamer.vala  tree_scanner.vala
src/operations/: copy_file_operation.vala  delete_file_operation.vala  move_file_operation.vala  operation.vala
src/settings/: abstract_settings.vala  pane_settings.vala  settings.vala
src/util/: async_task.vala  gui_executor.vala
